--- a/CorpusSearchEngine.csproj
+++ b/CorpusSearchEngine.csproj
@@ -21,6 +21,9 @@
     <None Update="Texts\DIPLOMATARIUM.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Texts\test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
